--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -38,11 +38,12 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item" *ngFor="let chatMessage of webSocketService.chatMessages">
             <strong>
-              {{chatMessage.user}}:
+              {{chatMessage.user.toString()}}:
             </strong>
             <span>
               {{chatMessage.message}}
             </span>
+            <img *ngIf="chatMessage.imageData" [src]="'data:' + chatMessage.fileType + ';base64,' + chatMessage.imageData" alt="Image">
           </li>
         </ul>
 
@@ -57,6 +58,7 @@
           <input type="text" class="form-control" name="message" id="input-message" ngModel>
         </div>
         <div class="col-2">
+          <input type="file" (change)="onFileSelected($event)">
           <button type="submit" class="btn btn-primary">Send</button>
         </div>
       </div>
